--- a/built/index.html
+++ b/built/index.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ru">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta charset="UTF-8">
@@ -195,7 +196,7 @@
       </div>
     </section>
 
-    <form action="" class="form-wide violet">
+    <form action="/" class="form-wide violet">
       <div class="base-col">
         <h2 class="section-headline white">Узнайте как получить скидку 30% на потолки</h2>
 
@@ -365,7 +366,7 @@
       </div>
     </section>
 
-    <form action="" class="form-wide grey">
+    <form action="/" class="form-wide grey">
       <div class="base-col">
         <h2 class="section-headline">Остались вопросы? Задайте их нам</h2>
 
@@ -452,9 +453,9 @@
       <p class="popup-description">Наш менеджер свяжется с Вами в ближайшие неколько минут и подробно проконсультирует!</p>
     </div>
 
-    <form action="" class="popup-form">
+    <form action="/" class="popup-form">
       <p><input type="text" class="input grey" placeholder="Ваше имя" required></p>
-      <p><input type="phone" class="input grey" placeholder="Номер телефона" required></p>
+      <p><input type="tel" class="input grey" placeholder="Номер телефона" required></p>
       <p class="form-wide-item"><button class="btn squared medium violet">Отправить заявку</button></p>
     </form>
   </div>
@@ -464,12 +465,12 @@
     <a class="js-close-popup closePopup"></a>
 
     <div class="popup-head">
-      <h4 class="section-headline" id="order-call-headline">Написать отзыв</h4>
+      <h4 class="section-headline">Написать отзыв</h4>
     </div>
 
-    <form action="" class="popup-form">
+    <form action="/" class="popup-form">
       <p><input type="text" class="input grey" placeholder="Ваше имя" required></p>
-      <p><input type="phone" class="input grey" placeholder="Номер телефона" required></p>
+      <p><input type="tel" class="input grey" placeholder="Номер телефона" required></p>
       <p><textarea name="" class="input grey" placeholder="Отзыв"></textarea></p>
       <p class="form-wide-item"><button class="btn squared medium violet">Написать отзыв</button></p>
     </form>
