--- a/built/index.html
+++ b/built/index.html
@@ -471,7 +471,7 @@
     <form action="/" class="popup-form">
       <p><input type="text" class="input grey" placeholder="Ваше имя" required></p>
       <p><input type="tel" class="input grey" placeholder="Номер телефона" required></p>
-      <p><textarea name="" class="input grey" placeholder="Отзыв"></textarea></p>
+      <p><textarea name="review" class="input grey" placeholder="Отзыв"></textarea></p>
       <p class="form-wide-item"><button class="btn squared medium violet">Написать отзыв</button></p>
     </form>
   </div>
