--- a/built/index.html
+++ b/built/index.html
@@ -202,7 +202,7 @@
 
         <fieldset>
           <p class="form-wide-item"><input type="text" placeholder="Ваше имя" class="input" required></p>
-          <p class="form-wide-item"><input type="text" placeholder="Номер телефона" class="input" required></p>
+          <p class="form-wide-item"><input type="tel" placeholder="Номер телефона" class="input" required></p>
           <p class="form-wide-item"><button class="btn squared medium">Получить скидку</button></p>
         </fieldset>
       </div>
@@ -372,7 +372,7 @@
 
         <fieldset>
           <p class="form-wide-item"><input type="text" placeholder="Ваше имя" class="input" required></p>
-          <p class="form-wide-item"><input type="text" placeholder="Номер телефона" class="input" required></p>
+          <p class="form-wide-item"><input type="tel" placeholder="Номер телефона" class="input" required></p>
           <p class="form-wide-item"><button class="btn squared medium">Задать вопрос</button></p>
         </fieldset>
       </div>
